tests/NormalTests/paczka2/big_fuzzy/28138756.err
Error in line 1: WQ9963PFzL A50 5,6
Error in line 16: JQ1Huf6t5Br S680 10,6
Error in line 19: JQ1Huf6t5Br A50 83,8
Error in line 5: 9Ts S622 15,0
Error in line 28: 0yP A\86 26,7
Error in line 8: Q7OR S622 37,1
Error in line 33: 0yP A50 76,7
Error in line 36: Q7OR A386 51,0
Error in line 37: tb2w S680 60,9
Error in line 40: Q7OR S622 27,1
Error in line 29: 9Ts A50 198,4
Error in line 38: JQ1Huf6t5Br A386 259,1
Error in line 49: S622 S680 96,5
Error in line 50: S622 A50 11,2
Error in line 42: Q7OR S680 30,4
Error in line 41: tb2w A386 66,9
Error in line 60: S622 S680 70,8
Error in line 62: tb2w S622 94,3
Error in line 44: 9Ts S680 95,1
Error in line 72: S622 A50 93,9
Error in line 81: 0yP&A50&59,7
Error in line 77: tb2w A50 304,3
Error in line 86: S622 S622 162,8
Error in line 80: 0yP S622 67,4
Error in line 95: S622 A386 62,7
Error in line 100: Q7OR A50 81,6
Error in line 94: 0yP A50 129,5
Error in line 109: tb2w S622 7,7
Error in line 122: 9Ts S622 84,17
Error in line 119: 9Ts A386 64,1
Error in line 127: Q7OR S622 83,9
Error in line 131: WQ9963PFzL A50 50,3
Error in line 139: S622 A50 20,0
Error in line 146: S622 S622 2,7
Error in line 140: 0yP S622 24,3
Error in line 157: 0yP A386 54,7
Error in line 144: 9Ts S622 99,4
Error in line 137: WQ9963PFzL S680 177,5
Error in line 167: WQ9963PFzL A50 57,8
Error in line 166: 0yP S622 71,8
Error in line 174: JQ1Huf6t5Br S622 V3,1
Error in line 199: 9Ts A386 4,07
Error in line 200: S622 S622 11,3
Error in line 191: WQ9963PFzL A386 111,5
Error in line 208: WQ9963PFzL S622 47,9
Error in line 209: JQ1Huf6t5Br S622 84,7
Error in line 215: tb2w S622 224,01
Error in line 187: 9Ts A386 6,9
Error in line 213: tb2w S622 92,6
Error in line 221: 9Ts S622 100,0
Error in line 243: tb2wA38618,6
Error in line 240: WQ9963PFzL S622 25,3
